update meta og image

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="The Wedding of Maya & Irwan">
     <meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i. Mohon doa restu di hari bahagia kami.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1511285560982-1351c4f631fc">
-    <meta property="og:url" content="https://satumomen.com/MayaIrwan">
+    <meta property="og:image" content="https://mayairwan.vercel.app/images/thumbnail.png">
+    <meta property="og:url" content="https://mayairwan.vercel.app/">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Nunito:wght@300;600;700&family=Cormorant+Garamond:ital,wght@1,500&family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
@@ -637,3 +637,4 @@ function openInvitation() {
     </script>
 </body>
 </html>
+
