--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:title" content="The Wedding of Maya & Irwan">
     <meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i. Mohon doa restu di hari bahagia kami.">
     <meta property="og:image" content="https://mayairwan.vercel.app/images/thumbnail.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://mayairwan.vercel.app/">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
